tests/errors/missing-return-type/main.pa
# A function type with `->` but no return type after it.
def f :: fun int -> = 1
def main = print "x"
